--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <ul id="nav-mobile" class="left hide-on-med-and-down">
                         <li><a href="#about">About</a></li>
                         <li><a href="#slime">Slime</a></li>
+                        <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
             </nav>
@@ -52,108 +53,130 @@
                 </div>
         </div>
         <!-- SLIME -->
-        <div class="row" id="slime">
-            <div class="col s12 center">
-                <h5>SLIME</h5>
-                <h6>for purchase</h6>
-            </div>
+    <div class="row" id="slime">
+        <div class="col s12 center">
+            <h5>SLIME</h5>
+            <h6>for purchase</h6>
         </div>
-        <div class="row">
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/slime.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                        <p><a href="#">Link to purchase</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/slime.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                        <p><a href="#">Link to purchase</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/slime.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                        <p><a href="#">Link to purchase</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    </div>
+        <div id="slime-container">
 
-        <div class="row">
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/slime.jpg">
+            <div class="row">
+                <div class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/slime.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Link to purchase</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                        </div>
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                        <p><a href="#">Link to purchase</a></p>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/slime.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Link to purchase</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                        </div>
                     </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/slime.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Link to purchase</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/slime.jpg">
-                    </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                        <p><a href="#">Link to purchase</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+
+            <div class="row">
+                <div class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/slime.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Link to purchase</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col s12 m6 l4">
-                <div class="card">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class="activator" src="assets/images/slime.jpg">
+                <div class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/slime.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Link to purchase</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                        </div>
                     </div>
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                        <p><a href="#">Link to purchase</a></p>
-                    </div>
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                </div>
+                <div class="col s12 m6 l4">
+                    <div class="card">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="assets/images/slime.jpg">
+                        </div>
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                            <p><a href="#">Link to purchase</a></p>
+                        </div>
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- FOOTER -->
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <p>Made with love and sparkles in Austin, TX</p>
+                    <p>© 2018 Ana Sofia</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <p>Catch me here:</p>
+                    <a href="https://www.youtube.com/channel/UCqKLtkkDZ1jTzWc553zrfLg" target="_blank"><img class="contact-icons" src="assets/images/youtube.png" alt="YouTube"></a>
+                    <a href="https://www.etsy.com/" target="_blank"><img class="contact-icons" src="assets/images/etsy.png" alt="Etsy"></a>
+                </div>
+            </div>
+            <!--<div class="row">-->
+                <!--© 2018 Ana Sofia-->
+            <!--</div>-->
+        </div>
+    </footer>
     <!-- jQuery -->
     <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
     <!-- Local JS files -->
