Updated background and removed files.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
 </head>
 
 <body>
-    <!-- CONTAINER -->
-    <div class="container-fluid">
         <!-- NAVBAR -->
-        <div class="navbar-fixed">
+        <div class="navbar-fixed container-fluid">
             <nav>
                 <div class="nav-wrapper">
                     <a href="#" class="brand-logo center">Star Slimes</a>
@@ -33,126 +31,143 @@
                 </div>
             </nav>
         </div>
+        <!-- INTRO -->
+        <div class="parallax-container center valign-wrapper">
+          <div class="container" id="intro">
+            <div class="row">
+              <div class="col s12">
+                <h6>welcome to</h6>
+                <h1>STAR SLIMES</h1>
+                <img src="assets/images/purple-star.jpg">
+              </div>
+            </div>
+          </div>
+          
+          <div class="parallax">
+            <img src="assets/images/rainbow-slime.jpg">
+          </div>
+
+        </div>
         <!-- ABOUT -->
         <div class="row" id="about">
 
-                <div class="col s12 center">
-                    <h5>ABOUT</h5>
-                    <h6>the slime maker</h6>
-                </div>
+            <div class="col s12 center">
+                <h5>MEET</h5>
+                <h6>the slime artist</h6>
+            </div>
         </div>
         <div class="row" id="about-photo">
-            <div class="col s6 offset-s3 center"><img src="assets/images/star-slimes.jpeg"></div></div>
+            <div class="responsive-img col s6 center"><img src="assets/images/star-slimes.jpeg"></div>
         </div>
-        <div class="row" id="about-info">
-                <!--<div class="col s4 push-s1"><img src="assets/images/star-slimes.jpeg"></div>-->
-                <div class="col s6 offset-s3 center">
-                    <span class="flow-text">Chocolate cake icing candy gummies tart sesame snaps. Marzipan dessert ice cream sesame snaps donut. Lollipop soufflé caramels.
+    <!-- </div> -->
+    <div class="row" id="about-info">
+        <!--<div class="col s4 push-s1"><img src="assets/images/star-slimes.jpeg"></div>-->
+        <div class="col s6 offset-s3 center">
+            <span class="flow-text">Chocolate cake icing candy gummies tart sesame snaps. Marzipan dessert ice cream sesame snaps donut. Lollipop soufflé caramels.
                         Cake tiramisu toffee macaroon. Chocolate cake cake chocolate bar cotton candy tart powder oat cake pastry. Muffin jelly-o tiramisu carrot cake topping.
                         Danish pastry gummies. Lemon drops cake sweet roll sugar plum carrot cake sugar plum jelly. Gummi bears sweet roll pudding topping sesame snaps donut bear claw.</span>
-                </div>
         </div>
-        <!-- SLIME -->
+    </div>
+    <!-- SLIME -->
     <div class="row" id="slime">
         <div class="col s12 center">
             <h5>SLIME</h5>
             <h6>for purchase</h6>
         </div>
     </div>
-        <div id="slime-container">
+    <div id="slime-container">
 
-            <div class="row">
-                <div class="col s12 m6 l4">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/slime.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">Link to purchase</a></p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
-                        </div>
+        <div class="row">
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="responsive-img card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/slime.jpg">
                     </div>
-                </div>
-                <div class="col s12 m6 l4">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/slime.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">Link to purchase</a></p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
-                        </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">Link to purchase</a></p>
                     </div>
-                </div>
-                <div class="col s12 m6 l4">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/slime.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">Link to purchase</a></p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
-                        </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
                     </div>
                 </div>
             </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/slime.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">Link to purchase</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/slime.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">Link to purchase</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-            <div class="row">
-                <div class="col s12 m6 l4">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/slime.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">Link to purchase</a></p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
-                        </div>
+        <div class="row">
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/slime.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">Link to purchase</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="col s12 m6 l4">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/slime.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">Link to purchase</a></p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
-                        </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/slime.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">Link to purchase</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
                     </div>
                 </div>
-                <div class="col s12 m6 l4">
-                    <div class="card">
-                        <div class="card-image waves-effect waves-block waves-light">
-                            <img class="activator" src="assets/images/slime.jpg">
-                        </div>
-                        <div class="card-content">
-                            <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
-                            <p><a href="#">Link to purchase</a></p>
-                        </div>
-                        <div class="card-reveal">
-                            <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
-                            <p>Here is some more information about this slime that is only revealed once clicked on.</p>
-                        </div>
+            </div>
+            <div class="col s12 m6 l4">
+                <div class="card">
+                    <div class="card-image waves-effect waves-block waves-light">
+                        <img class="activator" src="assets/images/slime.jpg">
+                    </div>
+                    <div class="card-content">
+                        <span class="card-title activator grey-text text-darken-4">Slime name<i class="material-icons right">more_vert</i></span>
+                        <p><a href="#">Link to purchase</a></p>
+                    </div>
+                    <div class="card-reveal">
+                        <span class="card-title grey-text text-darken-4">Slime name<i class="material-icons right">close</i></span>
+                        <p>Here is some more information about this slime that is only revealed once clicked on.</p>
                     </div>
                 </div>
             </div>
@@ -163,7 +178,7 @@
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
-                    <p>Made with love and sparkles in Austin, TX</p>
+                    <p>Made with a lot of love and a little magic in Austin, TX</p>
                     <p>© 2018 Ana Sofia</p>
                 </div>
                 <div class="col l4 offset-l2 s12">
@@ -172,18 +187,16 @@
                     <a href="https://www.etsy.com/" target="_blank"><img class="contact-icons" src="assets/images/etsy.png" alt="Etsy"></a>
                 </div>
             </div>
-            <!--<div class="row">-->
-                <!--© 2018 Ana Sofia-->
-            <!--</div>-->
         </div>
     </footer>
     <!-- jQuery -->
-    <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Local JS files -->
-    <script type="text/javascript" src="js/cursor.js"></script>
-    <!-- Materialize Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- <script type="text/javascript" src="js/cursor.js"></script> -->
     <!-- Materialize JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
+    <!-- Materialize Compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
+
 </html>
