--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8">
     <meta name="description" content="write a description">
     <title>Star Slimes</title>
+    <!-- FavIcon -->
+    <link rel="shortcut icon" href="assets/images/favicon.ico"/>
     <!-- MATERIALIZE Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Materialize Icons -->
