Adding bubble cursor.

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
     <!-- jQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Local JS files -->
-    <!-- <script type="text/javascript" src="js/cursor.js"></script> -->
+    <script type="text/javascript" src="js/bubbleCursor.js"></script>
+    <!-- <script type="text/javascript" src="js/sparkleCursor.js"></script> -->
     <!-- Materialize JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <!-- Materialize Compiled and minified JavaScript -->
