Adding videos page.

--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
         <div class="navbar-fixed container-fluid">
             <nav>
                 <div class="nav-wrapper">
-                    <a href="#" class="brand-logo center">Star Slimes</a>
+                    <a href="index.html" class="brand-logo center">Star Slimes</a>
                     <ul id="nav-mobile" class="left hide-on-med-and-down">
                         <li><a href="#about">About</a></li>
                         <li><a href="#slime">Slime</a></li>
                         <li><a href="#contact">Contact</a></li>
+                    </ul>
+                    <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <li><a href="videos.html">YouTube</a></li>
                     </ul>
                 </div>
             </nav>
