--- a/index.html
+++ b/index.html
@@ -197,8 +197,9 @@
     <!-- jQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <!-- Local JS files -->
-    <script type="text/javascript" src="js/bubbleCursor.js"></script>
+    <!--<script type="text/javascript" src="js/bubbleCursor.js"></script>-->
     <!-- <script type="text/javascript" src="js/sparkleCursor.js"></script> -->
+    <script type="text/javascript" src="js/sparkleHover.js"></script>
     <!-- Materialize JavaScript at end of body for optimized loading-->
     <script type="text/javascript" src="js/materialize.min.js"></script>
     <!-- Materialize Compiled and minified JavaScript -->
